# ESP_ROBOTICS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/cytron/: lsa08.c  lsa08.h  mdds.c  mdds.h
main/econnect/: espi.c  espi.h
main/encoder/: rotary_encoder.c  rotary_encoder.h
main/include/: gpio.h  pr_log.h
main/mpu6xxx/: mpu6886_reg.h  mpu6xxx.c  mpu6xxx.h
main/ps_hid/: ps.c  ps.h  ps_common.h  ps_ds.c  ps_ds.h  ps_ds4.c  ps_ds4.h  ps_spp.c  ps_spp.h
